# github-webhook-rust

./: .dockerignore  Cargo.toml  Dockerfile  HEADER.txt  NOTICE.txt  README.md  release.sh  run.sh
channels/telegram/: config.json
channels/telegram/templates/: ping.md
resources/certificates/: cert.pem  key.pem
resources/logs/: log4rs.yaml
src/: main.rs
